--- a/index.html
+++ b/index.html
@@ -1,8 +1,43 @@
-<html>
- <head>
-  <title>정수현</title>
- </head>
- <body>
- 정수현
- </body>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>자기소개서</title>
+    <link rel="stylesheet" href="index.css">
+</head>
+<body>
+    <div id="wrap">
+        <h1>SUHYUN JEONG</h1>
+        <table class="main">
+            <tr>
+                <td><span>PROFILE</span><br>&bull;1995년, 만 29세, ENFJ<br>
+                매듭 공예를 사랑하는 사람<br>3년 경력 공방 운영자<br>내 작품으로 클래스를 진행하고 있다.</td>
+
+                <td><span>HOBBY</span><br>매듭 공예<br>식물 키우기<br>음악 듣기 및 소설 읽기<br>수사 프로그램 보기</td>
+            </tr>
+            <tr>
+                <td class="a"><span>MBTI</span>
+                <p><img src="images/자기소개서_엠비티아이.png" alt="mbti">
+                <br><br>새로운 것을 배우는 걸 좋아하고<br> 창의적이 공감 능력이 뛰어난 타입</p>
+                </td>
+                
+
+                <td><span>MOTIVATION</span>
+                <p><img src="images/가위와실.PNG" alt="MOTIVATION"><br>다양한 종류와 색을 가진 재료<br>재미있는 아이디어를 줌으로써<br>즐거운 삶을 만들어 주고 있다.<br>
+                <img src="images/식물.PNG" alt="MOTIVATION"><br>나의 또 다른 취미이자 일인 식물<br>생각지 못한 기쁨을 줄 때가 있다.<br>가끔 식물 같은 사람이 되고 싶다.</p></td>
+            </tr>
+
+            <tr>
+                <td class="b"><span>WANT TO STUDY</span>
+                <p><img src="images/언어.PNG"></p>
+                <br>
+                <span>EMAIL</span><p>wjdtngus7136@naver.com</p>
+                </td>
+
+                <td><span>PRECIOUS THINGS</span><p><img src="images/가족강아지.PNG" alt="PRECIOUS"><br>우리 가족!<br>아빠, 엄마, 언니 그리고 강아지들<br>희로애락을 주는 소중한 존재들이다.</p></td>
+            </tr>
+        </table>      
+    </div>
+</body>
 </html>
