--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 
 
                 <td><span>MOTIVATION</span>
-                <p><img src="images/가위와실.PNG" alt="MOTIVATION"><br>다양한 종류와 색을 가진 재료<br>재미있는 아이디어를 줌으로써<br>즐거운 삶을 만들어 주고 있다.<br>
+                <p><img src="images/rope.PNG" alt="MOTIVATION"><br>다양한 종류와 색을 가진 재료<br>재미있는 아이디어를 줌으로써<br>즐거운 삶을 만들어 주고 있다.<br>
                 <img src="images/식물.PNG" alt="MOTIVATION"><br>나의 또 다른 취미이자 일인 식물<br>생각지 못한 기쁨을 줄 때가 있다.<br>가끔 식물 같은 사람이 되고 싶다.</p></td>
             </tr>
 
