--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자기소개서</title>
+    <title>포트폴리오_자기소개서</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
